// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in full width 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        style="overflow: hidden;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit MuiTab-fullWidth"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit MuiTab-fullWidth"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in vertical orientation 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-vertical MuiTabs-vertical"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-vertical MuiTab-textColorInherit"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodyMedium PicassoTypography-inherit PicassoTypography-semibold TypographyOverflow-wrapper TypographyOverflow-singleLine MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayInline"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-vertical MuiTab-textColorInherit"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodyMedium PicassoTypography-inherit PicassoTypography-semibold TypographyOverflow-wrapper TypographyOverflow-singleLine MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayInline"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator PrivateTabIndicator-vertical"
          style="top: 0px; height: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit Mui-selected PicassoTab-selected"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option using custom value 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit Mui-selected PicassoTab-selected"
            data-testid="tab-1"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit"
            data-testid="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit PicassoTypography-semibold MuiTypography-body1"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;
